fix: wrap

--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,7 @@ template {
 
 .books__wrapper {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 27px;
 }
 
